--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fcc-learn-npm-package-json",
-  "author": "Sebastian Giulianelli",
+  "author": "foobar",
   "dependencies": {
     "express": "^4.14.0"
   },
@@ -8,9 +8,11 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "8.11.2"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-  },
-  "author": "Sebastian Giulianelli"
+    "url": "https://idontknow/todo.git"
+  }
 }
